--- a/Worf Quotes/Base.lproj/LaunchScreen.storyboard
+++ b/Worf Quotes/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15C40a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <scenes>
@@ -21,7 +20,7 @@
                                 <rect key="frame" x="135" y="223" width="240" height="128"/>
                                 <animations/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Logo_graphic.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="wQ0-ZH-tIu">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="Logo_graphic.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="wQ0-ZH-tIu">
                                 <rect key="frame" x="135" y="68" width="240" height="128"/>
                                 <animations/>
                             </imageView>
@@ -29,9 +28,8 @@
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="wQ0-ZH-tIu" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="BkH-vp-5kq"/>
                             <constraint firstItem="7ah-PA-Yit" firstAttribute="top" secondItem="wQ0-ZH-tIu" secondAttribute="bottom" constant="27" id="Iy5-iE-Jw4"/>
-                            <constraint firstItem="wQ0-ZH-tIu" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="200" id="Xop-oA-UXy"/>
+                            <constraint firstItem="wQ0-ZH-tIu" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="200" id="Xop-oA-UXy" userLabel="Logo_graphic.jpg.top = Top Layout Guide.bottom + 100"/>
                             <constraint firstItem="7ah-PA-Yit" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="chz-b3-toA"/>
                         </constraints>
                     </view>
