--- a/Worf Quotes/Base.lproj/Main.storyboard
+++ b/Worf Quotes/Base.lproj/Main.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15C40a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -36,14 +35,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <adBannerView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fO1-eZ-Ed1">
-                                <rect key="frame" x="187" y="550" width="560" height="50"/>
-                                <animations/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="560" id="bI2-i2-e6R"/>
-                                    <constraint firstAttribute="height" constant="50" id="ubT-Tc-Qbu"/>
-                                </constraints>
-                            </adBannerView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Quotes from Lt Cmdr Worf" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eoo-du-5jD">
                                 <rect key="frame" x="160" y="20" width="280" height="50"/>
                                 <animations/>
@@ -282,14 +273,23 @@
                                     <constraint firstItem="jdD-yf-aQV" firstAttribute="leading" secondItem="KIx-K5-MIR" secondAttribute="trailing" constant="20" id="yED-w1-Axw" userLabel="Eating.leading = centerX + 20"/>
                                 </constraints>
                             </scrollView>
+                            <adBannerView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fO1-eZ-Ed1">
+                                <rect key="frame" x="0.0" y="550" width="560" height="50"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="560" id="bI2-i2-e6R" userLabel="width = 320"/>
+                                    <constraint firstAttribute="height" constant="50" id="ubT-Tc-Qbu"/>
+                                </constraints>
+                            </adBannerView>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="LTh-66-pbH" secondAttribute="trailing" constant="-10" id="I6g-Yz-ec5"/>
+                            <constraint firstItem="fO1-eZ-Ed1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="UCg-5d-wHG"/>
                             <constraint firstItem="Eoo-du-5jD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="W3a-R6-GDf"/>
                             <constraint firstItem="Eoo-du-5jD" firstAttribute="top" secondItem="eeg-Vy-tGm" secondAttribute="bottom" constant="8" id="als-d8-Mkf"/>
-                            <constraint firstItem="fO1-eZ-Ed1" firstAttribute="top" secondItem="LTh-66-pbH" secondAttribute="bottom" constant="8" id="izz-Z1-wDu"/>
+                            <constraint firstItem="fO1-eZ-Ed1" firstAttribute="top" secondItem="LTh-66-pbH" secondAttribute="bottom" constant="8" id="izz-Z1-wDu" userLabel="Banner View.top = Scroll View.bottom"/>
                             <constraint firstItem="LTh-66-pbH" firstAttribute="top" secondItem="eeg-Vy-tGm" secondAttribute="bottom" constant="45" id="ovt-Su-lGm"/>
                             <constraint firstItem="LTh-66-pbH" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="pU2-zx-8cJ"/>
                         </constraints>
@@ -300,7 +300,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-302" y="379"/>
+            <point key="canvasLocation" x="-516" y="379"/>
         </scene>
     </scenes>
     <resources>
